--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ h6 {
 }
 
 .produto-card {
-  border: none;
+  border: none!important;
   box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.25);
   padding: 1rem!important;
   margin: 1rem!important;
