--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ h6 {
 
 .produto-card {
   border: none!important;
-  box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.25);
   padding: 1rem!important;
   margin: 1rem!important;
 }
@@ -124,6 +124,7 @@ h6 {
   color: #94A2B7;
   font-size: 1rem;
   padding: 1rem;
+  font-weight: 600;
 }
 
 .produto-head {
@@ -151,4 +152,8 @@ h6 {
   .card-container{
     display: block;
   }
+}
+
+.produto {
+  font-family: Cerebri Sans SemiBold;
 }
