--- a/src/App.css
+++ b/src/App.css
@@ -61,10 +61,10 @@ h6 {
 }
 
 .button{
-  background-color: #2CA28D!important;
+  background-color: #366091!important;
   width: 100%;
   border: none!important;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   border-radius: 0.8rem!important;
   font-size: 0.9rem!important;
