--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,18 @@ h6 {
   padding: 0.6rem 2.2rem!important;
 }
 
+.spinner-border {
+  --bs-spinner-width: 1rem!important;
+  --bs-spinner-height: 1rem!important;
+  --bs-spinner-vertical-align: -0.125em;
+  --bs-spinner-border-width: 0.25em;
+  --bs-spinner-animation-speed: 0.75s;
+  --bs-spinner-animation-name: spinner-border;
+  border: var(--bs-spinner-border-width) solid currentcolor;
+  border-right-color: transparent;
+  margin-right: 1rem;
+}
+
 .button-saber-mais{
   background-color: #FFFFFF!important;
   color: #1465BD!important;
